# HuitzilinReflex

./: .gitattributes  .gitignore  CLAUDE.md  HuitzilinReflex_Week2_Playbook.docx  HuitzilinReflex_Week3_Playbook.docx  HuitzilinReflex_v2.md  LICENSE  README.md
.claude/: settings.local.json
docs/: JOURNAL.md  SAFETY_CASE.md  SETUP.md  WEEK2_PLAN.md  WEEK3_PLAN.md  architecture.md  frames.md  requirements.md  state_machine.md  week2_patrol_evidence.md  week3_capture_runbook.md  week3_dell_handoff.md
scripts/: first_flight.py  plot_telemetry.py  preflight_check.sh  run_regression.sh
src/huitzilin_perception/: package.xml  setup.cfg  setup.py
src/huitzilin_perception/config/: scenario_matrix.yaml
src/huitzilin_perception/huitzilin_perception/: detector_node.py  score_bags.py  spawn_projectile.py
src/huitzilin_perception/launch/: week3_perception.launch.py
src/huitzilin_perception/models/iris_depth/: model.config  model.sdf
src/huitzilin_perception/models/projectile/: model.config  model.sdf
src/huitzilin_perception/params/: detector.yaml  perception_bridge.yaml
src/huitzilin_perception/worlds/: huitzilin_runway.sdf
src/huitzilin_sim/: package.xml  setup.cfg  setup.py
src/huitzilin_sim/config/: huitzilin_3p5_6s.parm
src/huitzilin_sim/huitzilin_sim/: mav_bridge.py  mav_bridge_node.py  patrol_node.py  telemetry_logger.py
src/huitzilin_sim/launch/: week2_sitl.launch.py
src/huitzilin_sim/params/: bridge.yaml  patrol.yaml  sitl_frame.parm
src/mavlink_bridge/: package.xml  setup.py
src/mavlink_bridge/mavlink_bridge/: mavlink_bridge_node.py
